# aGain

./: .CMakeLists.txt.un~  CMakeLists.txt  CMakeLists.txt~  README.md
.github/workflows/: build.yml
concept/: aGainConcept.scd
include/: AGainProcessor.h
src/: AGainProcessor.cc  PluginProcessor.cc
